fix: change css property to var and calc, and add target for visible title section

--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,21 @@ a {
 
 body {
   min-width: 1020px;
+  --header-height: 95px;
+}
+
+:target::before {
+  display: block;
+  height: var(--header-height);
+  margin: calc(var(--header-height) * -1) 0 0;
+  visibility: hidden;
+  content: "";
 }
 
 .top {
   position:fixed;
   width: 100%;
-  height: 95px;
+  height: var( --header-height);
   z-index:1;  
   box-sizing: border-box;
   border-bottom: 6px solid #323746;
@@ -76,7 +85,7 @@ body {
 }
 
 .section-slider {
-  height: 695px;
+  height: calc(600px + var(--header-height));
   box-sizing: border-box;
   border-bottom: 5px solid #ea676b;
   background-color: #f06c64;  
@@ -88,25 +97,25 @@ body {
 
 .left-arrow{
   position: absolute;
-  top: 375px;
+  top: calc(285px + var(--header-height));
   cursor: pointer;
 }
 
 .vertical-Phone {
   position: absolute;
   left: 70px;
-  top: 79px;
+  top: calc(-16px + var(--header-height));
 }
 
 .horizontal-Pnone {
   position: relative;
   left: 320px;
-  top: 165px;
+  top: calc(70px + var(--header-height));
 }
 
 .right-arrow {
   position: absolute;
-  top: 378px;
+  top: calc(283px + var(--header-height));
   right: 0px;
   cursor: pointer;
 }
